devops/crypto/ingress-front-end.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-front-end
  annotations:
    external-dns.alpha.kubernetes.io/hostname: crypto-web.chenfei-demo.com
    external-dns.alpha.kubernetes.io/ttl: "60"
    external-dns.alpha.kubernetes.io/alias: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Content-Security-Policy: default-src * data: blob: 'unsafe-inline' 'unsafe-eval'; script-src * 'unsafe-inline' 'unsafe-eval'; connect-src * 'unsafe-inline'; img-src * data: blob: 'unsafe-inline'; frame-src *; style-src * 'unsafe-inline';";
      more_set_headers "Access-Control-Allow-Origin: *";
      more_set_headers "Access-Control-Allow-Methods: GET, POST, OPTIONS, PUT, DELETE";
      more_set_headers "Access-Control-Allow-Headers: DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
      more_set_headers "Referrer-Policy: no-referrer";
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - crypto-web.chenfei-demo.com
    secretName: crypto-web-tls
  rules:
  - host: crypto-web.chenfei-demo.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: front-end-sample-1-service
              port:
                number: 80
